Fixed all components that were misaligned. Added image to jumbotrons. Placed everything in divs and adjusted colum/grid sizes

--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -6,10 +6,6 @@ nav {
     margin-bottom: 0px;
 }
 
-.btn:hover {
-    margin-bottom: 0px;
-}
-
 .profileDropdownText {
     color: white;
 }
